added categories of articles to be included

--- a/Reuters_scraping.ipynb
+++ b/Reuters_scraping.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
     "# Find all political article links \n",
     "for a in soup.find_all(\"a\", href=True):\n",
     "    href = a[\"href\"]\n",
-    "    if (\"/world/us/\" in href and href.count(\"/\") > 3):\n",
+    "    if any(word in href for word in [\"/world/us/\", \"/business/\", \"/markets/\", \"/technology/\", \"/finance/\", \"/sustainability/\"]) and href.count(\"/\") > 3:\n",
     "        article_links.add(\"https://www.reuters.com\" + href)\n",
     "\n",
     "print(article_links)\n",
@@ -132,6 +132,17 @@
     "    print(f\"Title: {title}\")\n",
     "    time.sleep(random.uniform(5, 15))\"\"\n",
     "    \"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Titles:\n",
+    "Business: h1,  \"Heading\"\n",
+    "\n",
+    "Text:\n",
+    "Business: div, paragraph-X"
    ]
   },
   {
