Added mlflow pipeline and RDD DBScan

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -243,34 +243,164 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bbc09a3a",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "import mlflow\n",
+    "import mlflow.spark\n",
+    "from pyspark.sql.window import Window\n",
+    "from pyspark.sql.functions import lead\n",
+    "from pyspark.ml import Pipeline\n",
+    "from pyspark.ml.feature import VectorAssembler, StandardScaler\n",
+    "from pyspark.ml.regression import GBTRegressor\n",
+    "from xgboost.spark import SparkXGBRegressor\n",
+    "from pyspark.ml.evaluation import RegressionEvaluator\n",
+    "\n",
+    "# Assume `joinedFeat` from before is in scope:\n",
+    "# columns: w.start, open, high, low, close, volume, trade_count, vwap,\n",
+    "# volatility, log_return, article_count, avg_tone, sum_pos, sum_neg, avg_pol\n",
+    "\n",
+    "# 1) Build the labeled DataFrame with next-window close as label\n",
+    "wSpec = Window.orderBy(\"w.start\")\n",
+    "df = joinedFeat.withColumn(\"label\", lead(\"close\",1).over(wSpec)).na.drop(subset=[\"label\"])\n",
+    "\n",
+    "# 2) Assemble & scale features\n",
+    "feature_cols = [\n",
+    "    \"open\",\"high\",\"low\",\"close\",\"volume\",\"trade_count\",\"vwap\",\n",
+    "    \"volatility\",\"log_return\",\"article_count\",\"avg_tone\",\"sum_pos\",\"sum_neg\",\"avg_pol\"\n",
+    "]\n",
+    "assembler = VectorAssembler(inputCols=feature_cols, outputCol=\"raw_features\")\n",
+    "scaler    = StandardScaler(inputCol=\"raw_features\", outputCol=\"features\", withMean=True, withStd=True)\n",
+    "\n",
+    "# 3) Split into train/test\n",
+    "train_df, test_df = df.randomSplit([0.8,0.2], seed=42)\n",
+    "\n",
+    "# 4) Evaluator\n",
+    "evaluator = RegressionEvaluator(labelCol=\"label\", predictionCol=\"prediction\", metricName=\"rmse\")\n",
+    "\n",
+    "# ----------------------------------------------------\n",
+    "# 5) GBT run\n",
+    "# ----------------------------------------------------\n",
+    "mlflow.spark.autolog()   # enable Spark autologging\n",
+    "with mlflow.start_run(run_name=\"GBTRegressor\") as run:\n",
+    "    gbt = GBTRegressor(featuresCol=\"features\", labelCol=\"label\",\n",
+    "                       maxIter=50, maxDepth=5)\n",
+    "    pipeline_gbt = Pipeline(stages=[assembler, scaler, gbt])\n",
+    "    model_gbt = pipeline_gbt.fit(train_df)\n",
+    "    \n",
+    "    preds_gbt = model_gbt.transform(test_df)\n",
+    "    rmse_gbt = evaluator.evaluate(preds_gbt)\n",
+    "    mlflow.log_metric(\"rmse\", rmse_gbt)\n",
+    "    print(f\"GBT RMSE = {rmse_gbt:.4f}\")\n",
+    "\n",
+    "# ----------------------------------------------------\n",
+    "# 6) XGBoost run\n",
+    "# ----------------------------------------------------\n",
+    "# no need to call autolog again—the same setting applies\n",
+    "with mlflow.start_run(run_name=\"XGBRegressor\") as run:\n",
+    "    xgb = SparkXGBRegressor(\n",
+    "        features_col=\"features\",\n",
+    "        label_col=\"label\",\n",
+    "        objective=\"reg:squarederror\",\n",
+    "        num_round=100,\n",
+    "        max_depth=5,\n",
+    "        eta=0.1\n",
+    "    )\n",
+    "    pipeline_xgb = Pipeline(stages=[assembler, scaler, xgb])\n",
+    "    model_xgb = pipeline_xgb.fit(train_df)\n",
+    "    \n",
+    "    preds_xgb = model_xgb.transform(test_df)\n",
+    "    rmse_xgb = evaluator.evaluate(preds_xgb)\n",
+    "    mlflow.log_metric(\"rmse\", rmse_xgb)\n",
+    "    print(f\"XGB RMSE = {rmse_xgb:.4f}\")\n",
+    "\n",
+    "# ----------------------------------------------------\n",
+    "# 7) Compare in MLflow UI\n",
+    "# ----------------------------------------------------\n",
+    "print(\"Two runs have been logged.  Navigate to the MLflow Experiment UI to compare their RMSE and parameters side-by-side.\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "e2dd609b",
+   "id": "67e98e8e",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Custom DCScan Algorithm for Clustering News"
+   ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7779d522",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67b78a06",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d4db3c2b",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a74f1ebe",
-   "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "from pyspark.ml.linalg import Vectors\n",
+    "from pyspark.sql.functions import udf\n",
+    "from pyspark.sql.types import StringType\n",
+    "from math import sqrt, exp\n",
+    "\n",
+    "# 1.1 Extract per-article TF-IDF and window start as RDD\n",
+    "# Assume themesVec has columns: window (with .start), GKGRECORDID, tfidf\n",
+    "articleRDD = themesVec.rdd.map(lambda row: (\n",
+    "    row['w'].start,        # window_start timestamp\n",
+    "    (row['GKGRECORDID'], row['tfidf'])  # article id + vector\n",
+    "))\n",
+    "\n",
+    "# 1.2 Group per window \n",
+    "byWindow = articleRDD.groupByKey()  \n",
+    "# now: RDD[(window_start, Iterable[(id, tfidf_vec)])]\n",
+    "\n",
+    "# 1.3 A simple density-based clusterer (DBSCAN-lite)\n",
+    "def dbscan_cluster(points, eps=0.5, min_pts=3):\n",
+    "    # points: list of (id, SparseVector)\n",
+    "    clusters = {}\n",
+    "    visited = set()\n",
+    "    cid = 0\n",
+    "    # naive O(n^2) distance for demo\n",
+    "    def dist(u, v):\n",
+    "        diff = u.toArray() - v.toArray()\n",
+    "        return sqrt((diff*diff).sum())\n",
+    "    for pid, vec in points:\n",
+    "        if pid in visited:\n",
+    "            continue\n",
+    "        visited.add(pid)\n",
+    "        # find neighbors\n",
+    "        neigh = [q for q,w in points if dist(vec, w) <= eps]\n",
+    "        if len(neigh) < min_pts:\n",
+    "            clusters[pid] = -1  # noise\n",
+    "        else:\n",
+    "            # expand cluster\n",
+    "            stack = neigh[:]\n",
+    "            clusters[pid] = cid\n",
+    "            while stack:\n",
+    "                q = stack.pop()\n",
+    "                if q not in visited:\n",
+    "                    visited.add(q)\n",
+    "                    qvec = dict(points)[q]\n",
+    "                    qneigh = [r for r,w in points if dist(qvec, w) <= eps]\n",
+    "                    if len(qneigh) >= min_pts:\n",
+    "                        stack.extend(qneigh)\n",
+    "                if q not in clusters:\n",
+    "                    clusters[q] = cid\n",
+    "            cid += 1\n",
+    "    return clusters  # dict article_id → cluster_id\n",
+    "\n",
+    "# 1.4 Apply per window\n",
+    "clustered = byWindow.mapValues(lambda articles:\n",
+    "    dbscan_cluster(list(articles), eps=0.3, min_pts=2)\n",
+    ")\n",
+    "# clustered: RDD[(window_start, {article_id: cluster_id, …}), …]\n",
+    "\n",
+    "# 1.5 Turn back into a DataFrame if you want to aggregate cluster stats per window\n",
+    "rows = clustered.flatMap(lambda ws_map:\n",
+    "    [ (ws_map[0], aid, cid) for aid, cid in ws_map[1].items() ]\n",
+    ")\n",
+    "clusterDF = spark.createDataFrame(rows, schema=[\"window_start\",\"GKGID\",\"cluster_id\"])\n"
+   ]
   }
  ],
  "metadata": {
