only need to aggregate the news

--- a/aggr_functions_data.ipynb
+++ b/aggr_functions_data.ipynb
@@ -7,78 +7,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def aggregate_stock_data(df, aggr_window: str):\n",
-    "    \"\"\"Takes the stock dataframe and aggregates it to 1hour, 12hour or daily\n",
+    "def aggregate_news_daily(news_df: ):\n",
+    "        \"\"\"\n",
+    "        This function aggregates the news data by date and section name.\n",
+    "        It counts the number of articles published for each section on each date.\n",
+    "        :param news_df: DataFrame containing news data with columns 'pub_date', 'section_name', and 'news_desk'.\n",
     "\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    df: pyspark dataframe\n",
-    "        dataframe of our stockdata\n",
-    "\n",
-    "    aggr_window : str\n",
-    "        '1hour', '12hour', 'daily'\n",
+    "        :return: DataFrame with columns 'date', 'section_name', and 'num_mentioned' representing the count of articles.\n",
     "        \n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    new aggregated pyspark dataframe \n",
-    "    \"\"\"\n",
+    "        \"\"\"\n",
     "    \n",
-    "    \n",
+    "    news_df.createOrReplaceTempView(\"news_table\")\n",
     "\n",
-    "    df.createOrReplaceTempView(\"stock_table\")\n",
-    "\n",
+    "    # query to retrieve the data\n",
     "    sql_query = \"\"\"\n",
-    "    WITH DailyFirstOpen AS (\n",
-    "        -- This CTE finds the first 'open' for each day\n",
-    "        SELECT\n",
-    "            DATE(timestamp) AS event_date,\n",
-    "            open,\n",
-    "            ROW_NUMBER() OVER (PARTITION BY DATE(timestamp) ORDER BY timestamp ASC) as rn_open\n",
-    "        FROM\n",
-    "            stock_table\n",
-    "    ),\n",
-    "    RankedDailyFirstOpen AS (\n",
-    "        SELECT event_date, open\n",
-    "        FROM DailyFirstOpen\n",
-    "        WHERE rn_open = 1\n",
-    "    ),\n",
-    "    DailyLastClose AS (\n",
-    "        -- This CTE finds the last 'close' for each day\n",
-    "        SELECT\n",
-    "            DATE(timestamp) AS event_date,\n",
-    "            close,\n",
-    "            ROW_NUMBER() OVER (PARTITION BY DATE(timestamp) ORDER BY timestamp DESC) as rn_close\n",
-    "        FROM\n",
-    "            stock_table\n",
-    "    ),\n",
-    "    RankedDailyLastClose AS (\n",
-    "        SELECT event_date, close\n",
-    "        FROM DailyLastClose\n",
-    "        WHERE rn_close = 1\n",
-    "    )\n",
-    "    \n",
-    "    -- Join the results to get first open and last close on the same row per day\n",
-    "    SELECT\n",
-    "        r_open.event_date,\n",
-    "        r_open.open AS first_open,\n",
-    "        r_close.close AS last_close\n",
-    "    FROM\n",
-    "        RankedDailyFirstOpen r_open\n",
-    "    JOIN\n",
-    "        RankedDailyLastClose r_close ON r_open.event_date = r_close.event_date\n",
-    "    ORDER BY\n",
-    "        r_open.event_date\n",
+    "        WITH news_date_format as(\n",
+    "            SELECT \n",
+    "                date(pub_date) as date,\n",
+    "                section_name,\n",
+    "                news_desk\n",
+    "            FROM news_table)\n",
+    "\n",
+    "        SELECT \n",
+    "            date,\n",
+    "            section_name,\n",
+    "            count(*) as num_mentioned\n",
+    "        FROM news_date_format\n",
+    "            GROUP BY date, section_name        \n",
     "    \"\"\"\n",
     "\n",
+    "    # query \n",
+    "    aggr_df = spark.sql(sql_query)\n",
     "\n",
-    "\n",
-    "    if aggr_window == 'daily':\n",
-    "        new_df = spark.sql(sql_query)\n",
-    "\n",
-    "    return new_df\n",
-    "        \n"
+    "    return aggr_df"
    ]
   }
  ],
