--- a/aggr_functions_data.ipynb
+++ b/aggr_functions_data.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def aggregate_news_daily(news_df: ):\n",
+    "def aggregate_news_daily(news_df):\n",
     "        \"\"\"\n",
     "        This function aggregates the news data by date and section name.\n",
     "        It counts the number of articles published for each section on each date.\n",
