new version updated

--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -75,8 +75,6 @@
     "# 9. (OPTIONAL) SAVE TO DELTA TABLE\n",
     "OUTPUT_PATH = \"/mnt/nyt/sentiment_augmented\"\n",
     "augmented_df.write.format(\"delta\").mode(\"overwrite\").save(OUTPUT_PATH)\n",
-    "'''\n",
-    "\n",
     "\n",
     "# 1. Imports\n",
     "from pyspark.sql import SparkSession\n",
@@ -171,7 +169,177 @@
     "# save as Delta \n",
     "OUTPUT_PATH = \"/mnt/nyt/sentiment_daily_topic\"\n",
     "final_df.write.format(\"delta\").mode(\"overwrite\").save(OUTPUT_PATH)\n",
-    "\n"
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72ea1e7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ────────────────────────────────────────────────────────────────────────────────\n",
+    "# 0. (Re-)install lightweight HF model – one-time per cluster\n",
+    "# ────────────────────────────────────────────────────────────────────────────────\n",
+    "%pip uninstall -y torch transformers\n",
+    "%pip install --quiet torch==1.13.1 transformers==4.26.1\n",
+    "\n",
+    "# ────────────────────────────────────────────────────────────────────────────────\n",
+    "# 1. Imports & helpers\n",
+    "# ────────────────────────────────────────────────────────────────────────────────\n",
+    "import re\n",
+    "import torch\n",
+    "from transformers import pipeline\n",
+    "\n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.functions import (\n",
+    "    col, to_timestamp, window, collect_list, count,\n",
+    "    monotonically_increasing_id, first\n",
+    ")\n",
+    "\n",
+    "def sanitize(name: str) -> str:\n",
+    "    \"\"\"Turn an arbitrary topic into a safe column name.\"\"\"\n",
+    "    return re.sub(r\"[^A-Za-z0-9]+\", \"_\", name.strip()).lower()\n",
+    "\n",
+    "MODEL_NAME = \"assemblyai/distilbert-base-uncased-sst2\"\n",
+    "BATCH_SIZE  = 64                       # adjust for memory\n",
+    "\n",
+    "spark = SparkSession.builder.getOrCreate()\n",
+    "\n",
+    "# ────────────────────────────────────────────────────────────────────────────────\n",
+    "# 2. Pull the headline corpus\n",
+    "# ────────────────────────────────────────────────────────────────────────────────\n",
+    "articles = (\n",
+    "    spark.table(\"nyt_archive\")\n",
+    "         .filter(col(\"headline\").isNotNull())\n",
+    "         .withColumn(\"timestamp\", to_timestamp(col(\"pub_date\")))\n",
+    "         .select(\"timestamp\", \"headline\", \"topic\")\n",
+    ")\n",
+    "\n",
+    "# ────────────────────────────────────────────────────────────────────────────────\n",
+    "# 3. 24-hour tumbling window × topic   (list of headlines per group)\n",
+    "# ────────────────────────────────────────────────────────────────────────────────\n",
+    "groups = (\n",
+    "    articles\n",
+    "      .groupBy(window(\"timestamp\", \"24 hours\").alias(\"tw\"), col(\"topic\"))\n",
+    "      .agg(\n",
+    "          collect_list(\"headline\").alias(\"headlines\"),\n",
+    "          count(\"*\").alias(\"article_count\")\n",
+    "      )\n",
+    "      .select(\n",
+    "          col(\"tw.start\").alias(\"window_start\"),\n",
+    "          col(\"tw.end\").alias(\"window_end\"),\n",
+    "          \"topic\",\n",
+    "          \"headlines\",\n",
+    "          \"article_count\"\n",
+    "      )\n",
+    "      .withColumn(\"group_id\", monotonically_increasing_id())\n",
+    ")\n",
+    "\n",
+    "# ────────────────────────────────────────────────────────────────────────────────\n",
+    "# 4. Driver-side sentiment inference (HF pipeline batches internally)\n",
+    "# ────────────────────────────────────────────────────────────────────────────────\n",
+    "groups_local = groups.select(\"group_id\", \"headlines\").collect()\n",
+    "\n",
+    "sent_pipe = pipeline(\n",
+    "    \"sentiment-analysis\",\n",
+    "    model=MODEL_NAME,\n",
+    "    tokenizer=MODEL_NAME,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    truncation=True\n",
+    ")\n",
+    "\n",
+    "sent_results = []\n",
+    "for row in groups_local:\n",
+    "    gid, hl_list = row[\"group_id\"], row[\"headlines\"]\n",
+    "    preds   = sent_pipe(hl_list)\n",
+    "    labels  = [\"positive\" if p[\"label\"] == \"LABEL_1\" else \"negative\" for p in preds]\n",
+    "    pos, neg = labels.count(\"positive\"), labels.count(\"negative\")\n",
+    "    majority = \"positive\" if pos >= neg else \"negative\"           # tie → positive\n",
+    "    sent_results.append((gid, pos, neg, majority))\n",
+    "\n",
+    "sent_df = spark.createDataFrame(\n",
+    "    sent_results,\n",
+    "    [\"group_id\", \"positive_count\", \"negative_count\", \"majority_sentiment\"]\n",
+    ")\n",
+    "\n",
+    "# ────────────────────────────────────────────────────────────────────────────────\n",
+    "# 5. Join back – one row per window × topic\n",
+    "# ────────────────────────────────────────────────────────────────────────────────\n",
+    "daily_topic_df = (\n",
+    "    groups\n",
+    "      .join(sent_df, on=\"group_id\", how=\"left\")\n",
+    "      .select(\n",
+    "          \"window_start\", \"window_end\", \"topic\",\n",
+    "          \"article_count\", \"positive_count\", \"negative_count\",\n",
+    "          \"majority_sentiment\"\n",
+    "      )\n",
+    ")\n",
+    "\n",
+    "# ────────────────────────────────────────────────────────────────────────────────\n",
+    "# 6. Pivot so **each topic becomes a column**  (sentiment & counts)\n",
+    "# ────────────────────────────────────────────────────────────────────────────────\n",
+    "from functools import reduce\n",
+    "\n",
+    "# --- Pivot majority sentiment --------------------------------------------------\n",
+    "sent_pivot = (\n",
+    "    daily_topic_df\n",
+    "      .groupBy(\"window_start\", \"window_end\")\n",
+    "      .pivot(\"topic\")\n",
+    "      .agg(first(\"majority_sentiment\"))\n",
+    ")\n",
+    "\n",
+    "# --- Pivot article counts  --------\n",
+    "counts_pivot = (\n",
+    "    daily_topic_df\n",
+    "      .groupBy(\"window_start\", \"window_end\")\n",
+    "      .pivot(\"topic\")\n",
+    "      .agg(first(\"article_count\"))\n",
+    ")\n",
+    "\n",
+    "# --- Rename columns to safe, prefixed versions ---------------------------------\n",
+    "sent_safe   = sent_pivot\n",
+    "counts_safe = counts_pivot\n",
+    "for c in sent_pivot.columns:\n",
+    "    if c not in (\"window_start\", \"window_end\"):\n",
+    "        clean = sanitize(c)\n",
+    "        sent_safe   = sent_safe  .withColumnRenamed(c, f\"sent_{clean}\")\n",
+    "        counts_safe = counts_safe.withColumnRenamed(c, f\"count_{clean}\")\n",
+    "\n",
+    "# ────────────────────────────────────────────────────────────────────────────────\n",
+    "# 7. Combine sentiment + count matrices (optional)\n",
+    "# ────────────────────────────────────────────────────────────────────────────────\n",
+    "final_wide = (\n",
+    "    sent_safe\n",
+    "      .join(counts_safe, [\"window_start\", \"window_end\"], \"inner\")\n",
+    "      .orderBy(\"window_start\")\n",
+    ")\n",
+    "\n",
+    "# ────────────────────────────────────────────────────────────────────────────────\n",
+    "# 8. Inspect & persist\n",
+    "# ────────────────────────────────────────────────────────────────────────────────\n",
+    "display(final_wide)\n",
+    "# write into Delta (append mode), partitioned\n",
+    "\n",
+    "DELTA_PATH  = \"/mnt/nyt/news_sentiment\"\n",
+    "(\n",
+    "final_wide.write \\\n",
+    "        .format(\"delta\") \\\n",
+    "        .mode(\"overwrite\") \\\n",
+    "        .save(DELTA_PATH)\n",
+    ")\n",
+    "# 4) Register as a Hive table for easy querying\n",
+    "spark.sql(f\"\"\"\n",
+    "  CREATE TABLE IF NOT EXISTS news_sentiment\n",
+    "  USING DELTA\n",
+    "  LOCATION '{DELTA_PATH}'\n",
+    "\"\"\")\n",
+    "\n",
+    "\n",
+    "# Persist for downstream ML / dashboards\n",
+    "# OUTPUT_PATH = \"/mnt/nyt/sentiment_daily_topic_wide\"\n",
+    "# final_wide.write.format(\"delta\").mode(\"overwrite\").save(OUTPUT_PATH)\n"
    ]
   }
  ],
