updated sentiment analysis

--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -341,6 +341,110 @@
     "# OUTPUT_PATH = \"/mnt/nyt/sentiment_daily_topic_wide\"\n",
     "# final_wide.write.format(\"delta\").mode(\"overwrite\").save(OUTPUT_PATH)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2384c350",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ────────────────────────────────────────────────────────────────\n",
+    "# Graphs & visualizations\n",
+    "# ────────────────────────────────────────────────────────────────\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.dates as mdates\n",
+    "\n",
+    "# 0. CONFIG ──────────────────────────────────────────────────────\n",
+    "FILE = \"/mnt/data/BDA_Sent_Analysis.xlsx\"   # adjust path if needed\n",
+    "PLOT_STYLE = dict(color=\"royalblue\", alpha=0.7)\n",
+    "\n",
+    "# 1. LOAD & PREP ─────────────────────────────────────────────────\n",
+    "df = pd.read_excel(FILE)\n",
+    "\n",
+    "sent_cols  = [c for c in df.columns if c.startswith(\"sent_\")]\n",
+    "count_cols = [c for c in df.columns if c.startswith(\"count_\")]\n",
+    "\n",
+    "# helper → numeric: +1 / –1 / NaN\n",
+    "def lbl(x):\n",
+    "    x = str(x).lower()\n",
+    "    return 1 if x == \"positive\" else -1 if x == \"negative\" else np.nan\n",
+    "\n",
+    "sent_num = df[sent_cols].applymap(lbl)\n",
+    "\n",
+    "# daily pos / neg counts (NaN ignored) + ratio\n",
+    "df[\"pos_cnt\"] = (sent_num == 1).sum(axis=1)\n",
+    "df[\"neg_cnt\"] = (sent_num == -1).sum(axis=1)\n",
+    "df[\"pos_neg_ratio\"] = df.apply(\n",
+    "    lambda r: r[\"pos_cnt\"] / r[\"neg_cnt\"] if r[\"neg_cnt\"] > 0 else np.nan,\n",
+    "    axis=1\n",
+    ")\n",
+    "\n",
+    "# topic-level aggregated counts\n",
+    "topic_pos = {c[5:]: (df[c].str.lower() == \"positive\").sum() for c in sent_cols}\n",
+    "topic_neg = {c[5:]: (df[c].str.lower() == \"negative\").sum() for c in sent_cols}\n",
+    "topic_vol = {c[6:]: df[c].fillna(0).sum() for c in count_cols}\n",
+    "\n",
+    "topic_ratio = {\n",
+    "    k: (topic_pos[k] / topic_neg[k]) if topic_neg[k] > 0 else np.nan\n",
+    "    for k in topic_pos\n",
+    "}\n",
+    "ratio_ser = pd.Series(topic_ratio).dropna().sort_values()\n",
+    "\n",
+    "# 2. SA-Fig 1 — Daily line of POS/NEG ratio ─────────────────────\n",
+    "dates = pd.to_datetime(df[\"window_start\"])\n",
+    "plt.figure(figsize=(12, 4.5))\n",
+    "plt.plot(dates, df[\"pos_neg_ratio\"], **PLOT_STYLE, lw=2)\n",
+    "plt.axhline(1, ls=\"--\", color=\"grey\", lw=0.8)\n",
+    "plt.gca().xaxis.set_major_locator(mdates.MonthLocator())\n",
+    "plt.gca().xaxis.set_major_formatter(mdates.DateFormatter(\"%b-%y\"))\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.ylabel(\"Positive / Negative ratio\")\n",
+    "plt.title(\"Daily positive-to-negative sentiment ratio\")\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(\"SA_Fig1_ratio_line.png\", dpi=300)\n",
+    "plt.close()\n",
+    "\n",
+    "# 3. SA-Fig 2 — Topic bar of ratios ─────────────────────────────\n",
+    "plt.figure(figsize=(9, 12))\n",
+    "plt.barh(ratio_ser.index, ratio_ser.values, **PLOT_STYLE)\n",
+    "plt.axvline(1, color=\"black\", lw=0.8)\n",
+    "plt.xlabel(\"Positive / Negative ratio (Jan–Apr 2025)\")\n",
+    "plt.title(\"Topic-level sentiment ratio (NaN where never negative)\")\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(\"SA_Fig2_topic_bar.png\", dpi=300)\n",
+    "plt.close()\n",
+    "\n",
+    "# 4. SA-Fig 3 — Volume vs ratio scatter (circle bubbles) ───────\n",
+    "rows = [\n",
+    "    (t, topic_vol[t], topic_ratio[t])\n",
+    "    for t in topic_ratio.keys()\n",
+    "    if not np.isnan(topic_ratio[t])\n",
+    "]\n",
+    "scat = pd.DataFrame(rows, columns=[\"topic\", \"volume\", \"ratio\"])\n",
+    "\n",
+    "plt.figure(figsize=(9, 6))\n",
+    "plt.scatter(\n",
+    "    scat[\"volume\"],\n",
+    "    scat[\"ratio\"],\n",
+    "    s=scat[\"volume\"] / 5 + 20,\n",
+    "    marker=\"o\",\n",
+    "    **PLOT_STYLE\n",
+    ")\n",
+    "for _, r in scat.nlargest(12, \"volume\").iterrows():\n",
+    "    plt.text(r[\"volume\"], r[\"ratio\"] + 0.05, r[\"topic\"], fontsize=8)\n",
+    "plt.axhline(1, ls=\"--\", color=\"grey\", lw=0.8)\n",
+    "plt.xlabel(\"Total articles (null→0)\")\n",
+    "plt.ylabel(\"Positive / Negative ratio\")\n",
+    "plt.title(\"Coverage volume vs sentiment ratio by topic (Jan–Apr 2025)\")\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(\"SA_Fig3_scatter.png\", dpi=300)\n",
+    "plt.close()\n",
+    "\n",
+    "print(\"✓ SA-Fig1_ratio_line.png\\n✓ SA-Fig2_topic_bar.png\\n✓ SA-Fig3_scatter.png\")\n"
+   ]
   }
  ],
  "metadata": {
